--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "@heroui/theme": "2.4.5",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
+  "axios": "^1.7.9",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
+  "jwt-decode": "^4.0.0",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
   "react-dom": "18.3.1",
-  "react-icons": "^5.5.0"
+  "react-icons": "^5.5.0",
+  "react-toastify": "^11.0.3"
  },
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
